--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
+    "express-session": "^1.16.1",
     "mysql": "^2.17.1",
     "path": "^0.12.7"
   }
